--- a/style.css
+++ b/style.css
@@ -8,28 +8,33 @@ li{
     padding:10px;
 }
 .header{
-    background-color:#26d0c9;
+    height:100%;
+    width:100%;
+    background-color:#d026c2;
     color:#fff;
     height:90px
+    
 }
 
 .header-logo{
+    margin-top:20px;
+    background-color:red;
+    font-size:40px;
+    width:100%;
     float:left;
-    padding:20px 30px 50px 20px;
-    width:850px;
-    text-align: center;
 }
-.header-list{
+.header-Right{
+    font-size:100%;
+    margin-top:40px;
     float:left;
-    padding:33px 20px;
 
 }
+
 
 img{
-    width:300px;
-    
-    
-    margin:20px 10px 50px 200px;
-    padding:2px;
-    text-align:center;
+    margin:0 0 0 0;
+    padding:0;
+    float:left;
+    width:100%;
+    height:auto;
 }
