--- a/style.css
+++ b/style.css
@@ -1,51 +1,123 @@
-body{
-    font-family: "Avenir Next";
+.header {
+  height: 100%;
+  width: 100%;
+  background-color: #26d051;
+  color: #fff;
+  height: 90px;
 }
 
-.header{
-    height:100%;
-    width:100%;
-    background-color:#26d051;
-    color:#fff;
-    height:90px
-    
+.header-logo {
+  width: 400px;
+  margin-top: 0;
+  font-size: 40px;
+  float: left;
+  padding: 1%;
 }
 
-.header-logo{
-    width:400px;
-    margin-top:0;
-    font-size:40px;
-    float:left;
-    padding:1%;
+.profile {
+  width: 100%;
+  height: 490px;
+}
+.me {
+  width: 500px;
+}
+.me img {
+  clip-path: circle(160px at 260px 170px);
+
+  float: left;
+  width: 100%;
+  height: auto;
+}
+.about-me {
+  padding: 20px 33px 20px;
+}
+.profile h2 {
+  padding-top: 50px;
+  border-bottom: 1px solid green;
+}
+.list ul {
+  margin-top:50px;
+ 
+  list-style: none;
+  padding-top:20px;
+
+}
+.list ul li {
+  font-size:20px;
+  padding-top:5px;
+  margin-bottom: 8px;
+  padding-left: 1em;
+  text-indent: -1em;
 }
 
-.profile{
-    width:100%;
+h2 {
+  float: left;
+  border-bottom: 1px solid green;
+  width: 100%;
 }
-.me{
-    width:500px;
-    padding-top:3px;
+
+.hobby1 {
+  position: relative;
 }
-img{
-    clip-path:circle(160px at 260px 170px);
-    margin:0 0 0 0;
-    float:left;
-    width:100%;
-    height:auto;
+
+.hobby1 p {
+  position: absolute;
+  position: absolute;
+  padding-top:5px;
+  left: 0%;
+  
+  margin: 0;
+  padding: 0;
+  color: black;
+  font-size: 2em;
+  font-family: "Bangers", cursive;
 }
-.about-me{
-    padding:20px 33px 20px ;
+.hobby1 img {
+  clip-path: circle(250px at 380px 300px);
+  float: left;
+  object-fit:cover;
 }
-h2{
-    padding-top:50px;
-    border-bottom: 1px solid green;
-    
+
+.hobby1 h3{
+  padding:120px;
 }
-.list ul{
-    list-style:none;
+.hobby2 p{
+  position: absolute;
+  position: absolute;
+  left: 0%;
+  margin: 0;
+  padding-top: 5px;
+  color: black;
+  font-size: 2em;
+  font-family: "Bangers", cursive;
 }
-.list ul li{
-    margin-bottom:8px;
-    padding-left:1em;
-    text-indent:-1em;
+.slideshow  h2 {
+  font-size: 2em;
+  font-family: "Bangers", cursive;
+  letter-spacing: 0.2rem;
+}
+
+.slideshow img {
+  width: 600px;
+  height: 500px;
+  margin-left:40px;
+
+}
+.slideshow h2{
+  text-align: center;
+  font-family: serif;
+  letter-spacing: 0.2rem;
+}
+.slideshow {
+  text-align:center;
+  width: 680px;
+  height: 600px;
+  margin: 400px auto 10px auto;
+}
+
+button {
+  margin: auto;
+  display: block;
+  font-size: 20px;
+  font-family:  serif;
 }
