--- a/style2.css
+++ b/style2.css
@@ -1,27 +1,38 @@
-.hobby3{
-    margin-top:170px;
-    width:100%;
-    height:100%;
+.hobby3 {
+  margin-top: 170px;
+  width: 100%;
+  height: 100%;
 }
-.hobby3 p{
-    position: absolute;
-    position: absolute;
-    left: 0%;
-    color:black;
-    font-size: 2em;
-    font-family: "Bangers", cursive;
-    
-    float:left;
+.hobby3 p {
+  position: absolute;
+  position: absolute;
+  left: 0%;
+  color: black;
+  font-size: 2em;
+  font-family: "Bangers", cursive;
+  float: left;
 }
-.hobby3 br{
-    padding:5px;
+.hobby3 br {
+  padding: 5px;
 }
-.hobby3 h2{
-    margin-top:20px;
-    text-align:center;
+.hobby3 h3 {
+  margin: 15px;
+  padding: 10px;
 }
-.hobby3 img{
-    width:100%;
-    margin-top:40px;
-    clip-path: circle(400px at 440px 400px);
+.hobby3 h2 {
+  margin-top: 20px;
+  text-align: left;
+}
+.hobby3 img {
+  width: 300px;
+  margin-top: 40px;
+  clip-path: circle(150px at 150px 150px);
+}
+.hobby3 h4 {
+  height: 100px;
+  padding: 20px;
+  margin: 40px;
+}
+.Live {
+  display: flex;
 }
